fixed 'prices' on menu so that it aligns correctly

--- a/css/design.less
+++ b/css/design.less
@@ -26,6 +26,10 @@
 
 				&:last-child {
 					border-left:solid 1px #000000;
+
+					@media only screen and (max-width : @tablets) { 
+						border:none;
+					}
 				}
 
 				.banner-wrapper {
@@ -54,6 +58,17 @@
 
 		.menu-container {
 			overflow:hidden;
+			@media only screen and (max-width : @tablets) { 
+				overflow: initial;
+			}
+
+			h3 {
+				font-size:4em;
+
+				@media only screen and (max-width : @large-desktop) { 
+					font-size:2.9em;
+				}
+			}
 			
 			.two-cols {
 				width:46%;
@@ -69,6 +84,10 @@
 
 				&:last-child {
 					margin-left:4%;
+
+					@media only screen and (max-width : @tablets) { 
+						margin-left:0;
+					}
 				}
 
 				&:first-child {
@@ -78,6 +97,12 @@
 				.two-cols-left {
 					float:left;
 					width:40%;
+
+				@media only screen and (max-width : @tablets) { 
+					float:none;
+					width:100%;
+					margin-bottom:60px;
+				}
 
 					h3 {
 					margin-bottom:0;
@@ -93,6 +118,12 @@
 					float:right;
 					width:60%;
 
+				@media only screen and (max-width : @tablets) { 
+					float:none;
+					width:100%;
+					margin-bottom:60px;
+				}
+
 					ul {
 						margin-top:0;
 					}
@@ -100,6 +131,10 @@
 
 				.right-column {
 					width:88%;
+
+				@media only screen and (max-width : @tablets) { 
+					width:100%;
+				}
 
 					li {
 						&:nth-of-type(2n+1) {
@@ -127,6 +162,11 @@
 			.three-cols {
 				float:left;
 				width:25%;
+
+				@media only screen and (max-width : @tablets) { 
+					width:100%;
+					float:none;
+				}
 
 				&:nth-of-type(2n) {
 					width:50%;
