--- a/css/page-specifics.less
+++ b/css/page-specifics.less
@@ -39,7 +39,7 @@ color: #333;
 			color: #000;
 			font-weight: normal !important;
 			text-transform: uppercase;
-			font-size: 4.5em;
+			font-size: 3.5em;
 			.oswald;
 		}
 
@@ -82,7 +82,6 @@ color: #333;
 
 				ul{
 					li {
-						width:0;
 						position:absolute;
 						top:0;
 						right:0;
@@ -181,16 +180,12 @@ color: #333;
 					position:absolute;
 					left: -47px;
 					width:80px;
-					top:25px;
-					
+					top:25px;					
 				}
-
 		}
 
 	}
-
-
-	}
+}
 
 
 // FOOD MENU STUFF
