--- a/css/variables.less
+++ b/css/variables.less
@@ -5,6 +5,7 @@
 @black : #000000;
 @smartphones: ~"only screen and (max-width: 597px)";
 @tablets: 767px;
+@large-desktop: 1200px;
 
 
 
